[package]
authors = ["Abhimanyu Sharma <abhimanyusharma003@gmail.com>"]
edition = "2024"
name = "qubit"
version = "0.2.0"

[dependencies]
# can we remove these? (maybe is deprecated?)
float-pretty-print = "0.1.1"
iced = "0.14.0"
lazy_static = "1.5.0"
pest = "2.8.4"
pest_derive = "2.8.4"
web-sys = "0.3.83"
